# nekodraw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.ja.md  README.md
docs/: ADVANCED.md  DEVELOPMENT.md  INSTALLATION.md  PROMPT.md  REQUIREMENTS-HARDWARE.md
plugins/nekobridge/: __init__.py  constants.py  decorators.py  ops.py  props.py  types.py  utils.py
plugins/sample/: __init__.py
runtime/: .gitignore
runtime/NekoDraw/: python310._pth  runtime.pth
src/NekoBridge/: CMakeLists.txt  README.md  compat.h  pch.h
src/NekoBridge/compat/macos/: dllmain.cpp
src/NekoBridge/compat/windows/: compat.h  debugger.cpp  debugger.h  dllmain.cpp  path.cpp  path.h
src/NekoBridgeExample/: CMakeLists.txt  pch.h  pluginmain.cpp  pluginmain.h
src/NekoDraw/: CMakeLists.txt  NekoDraw.rc  NekoDraw.sln  NekoDraw.vcxproj  NekoDraw.vcxproj.filters  Processor.h  PyImage.cpp  PyImage.h  PyStdErrOutStreamRedirect.cpp  PyStdErrRedirect.cpp  PyStdErrRedirect.h  PyStdOutRedirect.cpp  PyStdOutRedirect.h  PyWith.cpp  PyWith.h  PythonProcessor.h  StableDiffusion.cpp  StableDiffusionProcessor.cpp  StableDiffusionProcessor.h  StableDiffusionPrompt.cpp  StableDiffusionPrompt.h  TriglavBitmapObject.cpp  TriglavBitmapObject.h  TriglavProgress.cpp  TriglavProgress.h  config.h.in  data.h  dllmain.cpp  pch.h  pluginmain.cpp  pluginmain.h  resource.h  stable-diffusion.cpp  stable-diffusion.h  strings.h
src/NekoNext/: CMakeLists.txt  README.md  constants.cpp  constants.h  defines.h  framework.h  pch.h  strings.cpp  strings.h
src/NekoNext/include/: nekonext.h
src/TriglavPlugInSDK/: README.md
tools/: switch.bat
